# optical-character-recognition

./: README.md  main.py  memory.json  pyproject.toml
static/: script.js  style.css
templates/: home.html
