[tool.poetry]
name = "ocr"
version = "0.1.0"
description = ""
authors = ["Martin Bonnefoy <martin.bonnefoy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-SocketIO = "^5.1.1"
pymongo = "^3.12.0"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
